# vacuum

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
apps/: alacritty.vacuum  bash.vacuum  clion.vacuum  compton.vacuum  fish.vacuum  fontconfig.vacuum  gitconfig.vacuum  goland.vacuum  i3.vacuum  ideavim.vacuum  intellij.vacuum  nvim.vacuum  polybar.vacuum  rider.vacuum  starship-rs.vacuum  sway.vacuum  termite.vacuum  tmux.vacuum  vim.vacuum  vscode.vacuum  webstorm.vacuum  x11.vacuum  zsh.vacuum
src/: app.rs  error.rs  main.rs  parser.rs
src/adapters/: deps_usecase.rs  file_system_executor.rs  mod.rs  pathbuf_context.rs  pom_parser.rs  restore_context.rs  store_context.rs  store_usecase.rs  use_cases.rs
src/adapters/context/: deps_context.rs  mod.rs  pathbuf_context.rs  restore_context.rs  store_context.rs
src/adapters/executor/: file_system_executor.rs  logger.rs  mod.rs
src/adapters/parsers/: mod.rs  pom_parser.rs
src/adapters/use_cases/: deps_usecase.rs  restore_usecase.rs  store_usecase.rs
src/application/: context.rs  executor.rs  handler.rs  mod.rs  ops.rs  parser.rs  usecase.rs
src/context/: context.rs  mod.rs  restore_context.rs  store_context.rs
src/domain/: mod.rs
src/executors/: context.rs  executor.rs  file_system_context.rs  file_system_executor.rs  logger.rs  mod.rs  ops.rs  store_context.rs
