[package]
name = "vacuum-experimental"
version = "0.1.0"
authors = ["ibrahim.dursun <ibrahim.dursun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ron = "0.5.1"
glob = "0.3.0"
dirs = "2"

[dependencies.serde]
version="1"
features= ["serde_derive"]
